# RUST_REPO

./: Cargo.toml  README.md
.github/workflows/: check_rust_prj.yml  cover_code.yml  workflow0.yml  workflow1.yml
.github/workflows_off/: workflow0.yml
WASI/: readme.md
WASI/dir_files/: Cargo.toml  readme.md
WASI/env_log/: Cargo.toml  readme.md
WASI/mio_echo_server/: Cargo.toml  readme.md
WASI/mio_echo_server/src/: main.rs
WASM/echo-tcp/: run.txt
WASM/hw_wasi/: Cargo.toml
WASM/test_wasi_embed_raw/: Cargo.toml
clippy_fmt/FizzBuzz/: rust-toolchain.toml
db_instance/: Cargo.toml
db_instance/migrations/: 20230208125418_smarthouse.sql
db_instance/src/: implement_db_trait.rs  main.rs
db_sqlite/: Cargo.toml  sqlite.db-shm  sqlite.db-wal
db_sqlite/examples/: client.rs
db_sqlite/src/: main.rs  main.rsBKP
dynamic_smart_house/shouse_b/: Cargo.toml
dynamic_smart_house_tcp/: Cargo.toml  dynamic_smart_house_tcp.7z
dynamic_smart_house_tcp_and_udp/: dynamic_smart_house_tcp_and_udp.7z  readme.md
dynamic_smart_house_tcp_and_udp/server_shouse/: Cargo.toml
dynamic_smart_house_tcp_and_udp_test/: dynamic_smart_house_tcp.7z  dynamic_smart_house_tcp_and_udp_test.7z
house_db_sqlite/migrations/: 20230208125418_smarthouse.sql
house_db_sqlite/src/: implement_db_trait.rs  main.rs
house_db_sqlite_and_iced/: Cargo.toml  iced.7z  readme.md
house_db_sqlite_and_iced/src/: gui.rs  implement_db_trait.rs  main.rs  sqlite.db  sqlite.db-shm  sqlite.db-wal
misc/AXUM/axumv2/: Cargo.toml
misc/AXUM/axumv2/src/: main.rs
misc/AXUM/test_axum/: Cargo.toml
misc/AXUM/test_axum/src/: main.rs
misc/C_lang/: Cargo.toml
misc/C_lang/src/: num.c  (+1 more)
misc/FEATURES/test_systemd/: Cargo.toml
misc/FEATURES/test_systemd/src/: main.rs  main1.rs
misc/OLD_HWS/dynamic_smart_house_tcp/client_application/: Cargo.toml
misc/OLD_HWS/dynamic_smart_house_tcp/server_shouse/: Cargo.toml
misc/OLD_HWS/dynamic_smart_house_tcp/server_shouse/src/: lib.rs  main.rs  server_data.rs  termometer_server_data.rs
misc/axumv3/: Cargo.toml
misc/axumv3/src/: hello.txt  hello2.txt  main.rs
misc/axumv3/src/pages/: test2.html
misc/common_behavior/: Cargo.toml
misc/dyn_trait/: Cargo.toml
misc/dynandany/: Cargo.toml
misc/enums_errors/: Cargo.toml
misc/example_anyhow_this_error/: Cargo.toml
misc/house_dynamic/: Cargo.toml
misc/lists/: Cargo.toml
misc/misc_test/: Cargo.toml
misc/misc_test2/: Cargo.toml
misc/rw_lock_example/: Cargo.toml
misc/structopt_test/: Cargo.toml
misc/test_00/: Cargo.toml
misc/test_Box/: Cargo.toml
misc/test_RC_2/: Cargo.toml
misc/test_args/: Cargo.toml
misc/test_assoc_types/: Cargo.toml
misc/test_axum/: Cargo.toml
misc/test_axum/src/: main.rs
misc/test_clojure/: Cargo.toml
misc/test_cw/: Cargo.toml
misc/test_generic/: Cargo.toml
misc/test_lifetimers/: Cargo.toml
misc/test_rayon/: Cargo.toml
misc/test_rc/: Cargo.toml
misc/test_structs/: Cargo.toml
misc/test_tokio_serv/: Cargo.toml
misc/test_tokio_serv/examples/: hello-redis.rs
misc/test_tokio_serv/src/: main.rs  readline_server_main.rs  simple_main.rs
misc/test_traits/: Cargo.toml
misc/test_vars/: Cargo.toml
misc/test_worspace/: Cargo.toml
misc/test_zero/: Cargo.toml
misc/tests_rstest_mockall/: Cargo.toml
misc_test/src/: main.rs
oop_lesson/: Cargo.toml  oop_lesson.7z  readme.md
oop_lesson/src/: main.rs
patterns_rust/: Cargo.toml  patterns_rust.7z  readme.md
patterns_rust/examples/: command.rs
project/: Cargo.toml
project/main-app/: Cargo.toml
project/main-app/src/: main.rs
project/redis-compose/: docker-compose-redis.yml
project/wasm-core/: Cargo.toml
project/wasm-core/lib_moses/src/: lib.rs
project/wasm-core/wapc/: Cargo.toml
project/wasm-core/wasmtime_runner/: Cargo.toml
project/wasm-core/wasmtime_runner/src/: lib.rs
rust_and_c/c_lang_lib/: CMakeLists.txt
rust_and_c/c_lang_lib/sources/testmy/: CMakeLists.txt  testapi.c  testapi.h
rust_and_c/runst_and_c_native/: Cargo.toml  build.rs
rust_and_c/rust_and_c_loading/: Cargo.toml
rust_and_c/rustlibc/: Cargo.toml
smart_house/: readme.md
smart_house/src/: smarthouse.rs
smart_house_axum/: Cargo.toml  axum_server.7z  readme.md
smart_house_axum/axum_server/: Cargo.toml
smart_house_impl/: Cargo.toml  readme.md
smart_house_impl/examples/: shouse_example.rs  shouse_example2.rs  shouse_example_error.rs
smart_house_impl/src/: lib.rs  main.rs
smart_house_impl_v2/: smart_house_impl.7z  smart_house_impl_v2.7z
smart_house_impl_v2/tests/: integration3.rs
smart_house_prj/: readme.md  smart_house_prj.7z  xtask
smart_house_prj/coverage/: tests.lcov
smart_house_tokio_framing/: Cargo.toml  dynamic_smart_house_tcp_and_udp_termo_and_socket.7z  smart_house_tokio_framing.7z
smart_house_tokio_framing/lib_shouse/: Cargo.toml
smart_house_tokio_framing/server_tokio/: Cargo.toml
smarthouse_C_api/: Cargo.toml  readme.md  smarthouse_C_api.7z
smarthouse_C_api/c_executable/: CMakeLists.txt
smarthouse_C_api/client_api/: Cargo.toml
smarthouse_C_api/client_api/src/: args.rs  lib.rs
smarthouse_c_api/: Cargo.toml
smarthouse_c_api/c_executable/: CMakeLists.txt
smarthouse_c_api/c_executable/sources/main/: main.c
smarthouse_c_api/client_application/: Cargo.toml
smarthouse_c_api/lib_shouse/: Cargo.toml
test_wasi_embed_r/: Cargo.toml
test_wasi_embed_r/src/: main.rs
tonic_example_communication/: Cargo.toml
tonic_example_communication/client/: build.rs
tonic_example_communication/proto/: example.proto_example  phone_prt.proto
tonic_example_communication/server/: Cargo.toml
tonic_example_communication/server/src/: main.rs
waPC/experimental/: wapc-coded
waPC/experimental/wasm3_rpc_example/: Cargo.toml
waPC/experimental/wasm3_rpc_example/examples/: wasm3-demo-serdes.rs  wasm3-demo.rs
waPC/experimental/wasm3_rpc_example/src/: lib.rs
waPC/experimental/wasmtime_rpc_example1/: Cargo.toml  wasm_basic.wasm
waPC/experimental/wasmtime_rpc_example1/examples/: wasmtime-demo.rs
waPC/experimentalv2/WASM/wasi-basic/: Cargo.toml
waPC/experimentalv2/WASM/wasi-basic/src/: lib.rs
(+217 files in other folders)
