[workspace]
resolver = "2"

description = "modular RPC (WASM) cypher example"
license = "Apache-2.0"
#homepage = "https://wapc.io"
#documentation = "https://docs.rs/wasmtime-provider"
#readme = "README.md"
#keywords = ["sdk", "wapc", "webassembly", "wasm", "wasmtime"]
#categories = ["wasm", "api-bindings"]

members = [
	"main-app",
	"wasm-core",
]

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
strip = "debuginfo"

[profile.dev]
opt-level = 0
debug = true
codegen-units = 8
split-debuginfo = "unpacked"
