
[package]
name = "axum-di"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
axum-macros = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.3", features = ["map-request-body", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
minijinja = "0.30.1"

[dev-dependencies]
rstest = "0.16"
mockall = "0.11"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["full"] }
tracing = "0.1.37" 
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]} 
#https://github.com/tokio-rs/axum/blob/main/examples/parse-body-based-on-content-type/src/main.rs
#https://stackoverflow.com/questions/74270324/axum-pass-parameters-to-handlers
#https://github.com/tokio-rs/axum
#https://github.com/tokio-rs/axum/blob/main/examples/form/src/main.rs
