[package]
name = "test_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.2"
minijinja = { version = "0.30.0", features = ["builtins"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = {version = "1.24.2", features = ["full"]}

