[package]
name = "test_tokio_serv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
tokio = { version = "*", features = ["full"] }
hyper = { version = "*", features = ["full"] }
bytes = {version = "*", features = ["serde"]}
serde = {version = "*",features = ["derive"]}
bincode = "*"
