[package]
name = "wasm-core"
version = "0.1.0"
authors = ["me <me@gmail.com>"]

#[workspace]
resolver = "2"

description = "modular RPC (WASM) cypher example"
license = "Apache-2.0"
#homepage = "https://wapc.io"
#documentation = "https://docs.rs/wasmtime-provider"
#readme = "README.md"
#keywords = ["sdk", "wapc", "webassembly", "wasm", "wasmtime"]
#categories = ["wasm", "api-bindings"]
[lib]
name = "libmoses"
path = "./lib_moses/src/lib.rs"

#members = [
#	"wapc",
#	"wapc-coded",
#	"wapc-guest",
#	"wasmtime-runner"
#	"lib-moses",
#]
wapc-codec = { path = "./wapc-codec" }
wapc = { path = "./wapc" }


