[package]
name = "client_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustlibc"
path = "./src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
lib_shouse = { path ="../lib_shouse" }
serde = {version = "*",features = ["derive"]}
serde_json = "*"
serde_repr = "*"
bincode = "*"
clap = {version = "*", features = ["derive"]}
libc = "0.2.141"
