[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bin"
path = "src/main.rs"

[dependencies]
blake2 = "0.10.6"
prost = "0.11.8"
prost-types = "0.11.8"
smallvec = "1.10.0"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"


[build-dependencies]
tonic-build = "0.8.3"
