[package]
name = "axumv2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.3"
hyper = { version = "0.14.23", features = ["full"]}
tokio = {version = "1.24.2",features =["full"] }
# https://github.com/joelparkerhenderson/demo-rust-axum
