[package]
name = "test_systemd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
simple_logger = "4.1.0"
time = "0.3.20"
#systemd = { version = "0.10", default-features = false }
systemd =  "0.10"
signal-hook = { version = "0.3.15", features = ["extended-siginfo"] }
daemonizr = "0.1.5"
project-root = "0.2.2"
