[package]
name = "wasmtime-example-rpc"
edition = "2021"
license = "Apache-2.0"
version = "1.0.0"
keywords = ["sdk", "wapc", "webassembly", "wasm", "wasmtime"]
categories = ["wasm", "api-bindings"]


[features]
default = ["wasi"]
cache = ["wasmtime/cache"]
wasi = ["wasi-common", "wasi-cap-std-sync", "wasmtime-wasi"]

[dependencies]
wapc =  "1.1.0" 
log = "0.4"
wasmtime = "7.0"
anyhow = "1.0"
thiserror = "1.0"
cfg-if = "1.0.0"
parking_lot = "0.12"

wasmtime-wasi = { version = "7.0", optional = true }
wasi-common = { version = "7.0", optional = true }
wasi-cap-std-sync = { version = "7.0", optional = true }
env_logger = "0.10.0"

#[dev-dependencies]
#wapc-codec = { path = "../wapc-codec" }
#env_logger = "0.10"
