[package]
name = "client_application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib_shouse = { path ="../lib_shouse" }
serde = {version = "*",features = ["derive"]}
serde_json = "*"
serde_repr = "*"
bincode = "*"
clap = {version = "*", features = ["derive"]}
